tests/error/private_global.gw
#! [contains] can only be used at class scope
var private int i;
